lib_d3d9 = cpp.find_library('d3d9')
lib_d3dcompiler = cpp.find_library('d3dcompiler_47')

executable('dx9_tri', ['dx9_triangle.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_indexed_cube', ['dx9_indexed_cube.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_depth', ['dx9_depth.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_blend', ['dx9_blend.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_shader_math', ['dx9_shader_math.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_textured_quad', ['dx9_textured_quad.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_textured_quad_sm2', ['dx9_textured_quad_sm2.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_fvf', ['dx9_fvf.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_draw_up', ['dx9_draw_up.cpp'],
  dependencies: [ lib_d3d9, lib_d3dcompiler ]
)

executable('dx9_query', ['dx9_query.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_state_storage', ['dx9_state_storage.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_ff_transform', ['dx9_ff_transform.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_ff_texstage', ['dx9_ff_texstage.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_ff_fog', ['dx9_ff_fog.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_ff_lighting', ['dx9_ff_lighting.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_fan', ['dx9_fan.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_ps1x', ['dx9_ps1x.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_a8l8', ['dx9_a8l8.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_stencil', ['dx9_stencil.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_scissor', ['dx9_scissor.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_src_modifiers', ['dx9_src_modifiers.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_caps', ['dx9_caps.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_alpha_test_ps', ['dx9_alpha_test_ps.cpp'],
  dependencies: [ lib_d3d9 ]
)

executable('dx9_lockrect', ['dx9_lockrect.cpp'],
  dependencies: [ lib_d3d9 ]
)
